# opspilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: provenance.md
data/answer_key/: README.md  build_goldens.py  scenarios.yaml  topology.yaml
data/distractors/: api-gateway-rate-limiting.md  api-versioning-strategy.md  catalog-search-latency.md  cdn-cache-purge.md  checkout-coupon-validation-errors.md  ci-cd-pipeline-overview.md  cosmos-db-backup-and-restore.md  data-retention-policy.md  email-provider-bounce-handling.md  inc-101-coupon-double-redemption.md  inc-102-email-provider-outage.md  inc-103-catalog-search-timeout.md  inventory-reconciliation-job-failures.md  payment-refund-failures.md  redis-connection-limit-exhaustion.md  service-bus-dead-letter-replay.md
data/kb/: README.md
data/kb/architecture/: observability-strategy.md  retailease-system-overview.md  service-dependency-map.md
data/kb/postmortems/: inc-001-payment-timeout.md  inc-002-cosmos-throttling.md  inc-003-servicebus-backlog.md
data/kb/runbooks/: checkout-api-500-errors.md  cosmos-db-throttling.md  deployment-rollback.md  payment-timeout.md  redis-cache-degradation.md  service-bus-backlog.md
data/profiles/: build_incident_profile.py  build_profile.py  build_profile_logs.py  itsm_profile.json  rcaeval_profile.json
data/synthetic/: README.md  alerts.json  dependencies.json  deployments.json  generate.py  generate_alerts_incidents.py  incidents.json  logs.jsonl  metrics.json
eval/: golden_incidents.json  golden_retrieval.json  harness.py  record_single_agent.py  record_wild.py  retrieval_eval.py  scenario_eval.py  wild.py
eval/baselines/: retrieval_scorecard.json  single_agent_baseline.json  slice_baseline.json  wild_scorecard.json
eval/cassettes/: single_agent.json  wild_single_agent.json
infra/: main.bicep
scripts/: smoke_deployment.py
src/opspilot/: __init__.py  api.py  auth.py  checkpoint.py  composition.py  config.py  contracts.py  cosmos_investigations.py  graph.py  investigations.py  repository.py  router.py  state.py  triage.py
src/opspilot/data/: __init__.py  repository.py
src/opspilot/diagnosis/: __init__.py  contracts.py  cycle.py  llm_planner.py  observe.py  planner.py  sufficiency.py
src/opspilot/eval/: __init__.py
src/opspilot/guardrails/: __init__.py  policies.py
src/opspilot/llm/: __init__.py  base.py  cassette.py  client.py  fake.py  prompts.py  schema.py
src/opspilot/llm/prompts/: diagnose_planner.v1.md  diagnose_planner.v2.md  diagnose_planner.v3.md  diagnose_synthesize.v1.md  triage.v1.md
src/opspilot/mcp/: __init__.py  server.py
src/opspilot/nodes/: __init__.py  investigation.py
src/opspilot/ops/: __init__.py
src/opspilot/retrieval/: __init__.py  adapters.py  base.py  bm25.py  corpus.py  embeddings.py  factory.py  index.py  reranker.py  retriever.py
src/opspilot/static/: console.html
src/opspilot/tools/: __init__.py  alerts.py  contracts.py  dependencies.py  deployments.py  errors.py  incidents.py  logs.py  metrics.py  search.py  service.py  stubs.py
tests/: test_answer_key.py  test_api.py  test_auth.py  test_bm25.py  test_cassette.py  test_checkpointer.py  test_closure.py  test_composition.py  test_diagnose.py  test_evidence_coverage.py  test_guardrails.py  test_incidents_alerts.py  test_investigations.py  test_investigations_api.py  test_kb.py  test_llm_client.py  test_llm_e2e.py  test_llm_planner.py  test_mcp_parity.py  test_observe.py  test_planner_seam.py  test_prompts.py  test_report_binding.py  test_repository_factory.py  test_retrieval.py  test_retrieval_factory.py  test_runtime_assets.py  test_scaffold.py  test_scenario_gate.py  test_schema.py  test_search_tools.py  test_single_agent_gate.py  test_state.py  test_state_contract.py  test_sufficiency.py  test_telemetry.py  test_tool_chain.py  test_tools.py  test_tools_operational.py  test_triage.py  (+2 more)
tests/fixtures/wild_ob/cartservice_cpu/1/: data.csv  inject_time.txt
tests/fixtures/wild_ob/paymentservice_delay/1/: data.csv
