[project]
name = "opspilot"
version = "0.1.0"
description = "Agentic AI incident-investigation assistant on Azure"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.3",
    "mcp>=1.28.1",
    # Lexical BM25 index — the deterministic runtime retrieval backend. Pure-Python and tiny;
    # unlike the dense/rerank ML stack (eval group) it ships in the runtime image.
    "rank-bm25>=0.2.2",
]

[dependency-groups]
data = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
]
eval = [
    "sentence-transformers>=5.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opspilot"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["opspilot"]
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "reranker: exercises the bge-reranker-v2-m3 cross-encoder (heavy ~2.2GB model; excluded from the CI gate lane with -m 'not reranker')",
]
