[project]
name = "opspilot"
version = "0.1.0"
description = "Agentic AI incident-investigation assistant on Azure"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.3",
    "mcp>=1.28.1",
    # Lexical BM25 index — the deterministic runtime retrieval backend. Pure-Python and tiny;
    # unlike the dense/rerank ML stack (eval group) it ships in the runtime image.
    "rank-bm25>=0.2.2",
    # Durable checkpointer — file-backed SQLite saver (Stage 5b). Small (aiosqlite + stdlib sqlite3);
    # the local/dev durable backend and what the CI resume gate runs against. The Cosmos prod saver
    # is the optional `checkpoint` group, lazy-imported, so it stays out of the lean image by default.
    "langgraph-checkpoint-sqlite>=2.0",
    # Reviewer-identity token validation (Stage 5e, G-01). A CORE dependency, deliberately not an
    # optional group: the decision endpoint fails closed, so "the auth library isn't installed"
    # must be impossible rather than a path that degrades to unauthenticated approval. `[crypto]`
    # pulls in `cryptography` for the RS256 signature check Entra's tokens require.
    "pyjwt[crypto]>=2.9",
]

[dependency-groups]
data = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "httpx>=0.27",  # FastAPI TestClient transport (API smoke tests)
]
eval = [
    "sentence-transformers>=5.6.0",
]
# LLM provider client (Stage 4). OpenAI-compatible SDK fronts qwen via Ollama, gpt-4o-mini, and
# Azure Foundry. `azure-identity` powers keyless Azure OpenAI auth (managed identity) so the
# deployed image needs no key. Imported lazily (config.LLM_PROVIDER=replay needs none of it); the
# production image installs this group (Dockerfile `--group llm`) to run the single_agent path.
llm = [
    "openai>=1.40",
    "azure-identity>=1.17",
]
# Production durable Cosmos DB backends: the LangGraph checkpointer (Stage 5b, first-party
# langchain-azure-cosmosdb) and the async job API's InvestigationRepository (Stage 5c,
# CosmosInvestigationRepository, direct azure-cosmos — already a transitive dep of the former, made
# explicit since it's now imported directly too). Both keyless via DefaultAzureCredential. Both
# lazy-imported by their respective `cosmos` backend, kept out of the lean image until the Cosmos
# deploy installs `--group checkpoint`.
checkpoint = [
    "langchain-azure-cosmosdb>=1.0",
    "azure-cosmos>=4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opspilot"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are meant to be called in argument defaults.
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
python_version = "3.12"
files = ["src/opspilot", "scripts"]
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "reranker: exercises the bge-reranker-v2-m3 cross-encoder (heavy ~2.2GB model; excluded from the CI gate lane with -m 'not reranker')",
    "llm: hits a live LLM provider (Ollama/OpenAI); excluded from the CI gate lane with -m 'not llm'. Wiring is covered deterministically by cassette replay, which needs no live model.",
]
